--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-    background: var(--color-primario);
+    background: var(--bg-color);
     color: var(--text-color);
     line-height: 1.6;
 }
