--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ section:nth-child(even) {
     display: flex;
     align-items: center;
     padding: 8rem 5% 4rem;
-    background: url('/images/home.jpg') no-repeat;
+    background: url('/images/home.jpg');
     background-size: cover;
     background-position: center;
     min-height: 100vh;
@@ -164,7 +164,7 @@ p {
     font-size: 3.2rem;
     font-weight: 700;
     color: transparent;
-    /* -webkit-text-stroke: .7px var(--main-color);*/
+    -webkit-text-stroke: .7px var(--main-color);
 }
 
 .home-content p {
@@ -185,7 +185,7 @@ p {
     width: 34.5rem;
     height: 5rem;
     margin-top: 2rem;
-    gap: 1rem;
+    gap: 1 rem;
 }
 
 .btn-box .btn {
@@ -382,6 +382,7 @@ span {
 
 .about-content p {
     font-size: 1.6rem;
+    margin: 2rem 3 3rem;
 }
 
 .btn-box.btns {
@@ -610,6 +611,7 @@ span {
 
 .contact form .input-box {
     position: relative;
+    position: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 1.5rem;
@@ -814,17 +816,17 @@ span {
     animation: fillBar 1.5s ease-out forwards;
 }
 
-/*@keyframes fillBar {
+@keyframes fillBar {
     from { width: 0; }
     to { width: attr(data-width); }
-}*/
+}
 
 .bar span::after {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: attr(data-width);
+    width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.3);
     animation: shine 1.5s infinite;
