--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ section:nth-child(even) {
     display: flex;
     align-items: center;
     padding: 8rem 5% 4rem;
-    background-image: url('/images/home.webp');
+    background-image: url('images/home.webp');
     background-size: cover;
     background-position: center;
     min-height: 100vh;
