--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ section:nth-child(even) {
     display: flex;
     align-items: center;
     padding: 8rem 5% 4rem;
-    background: url('images/home.jpg');
+    background: url('../images/home.jpg');
     background-size: cover;
     background-position: center;
     min-height: 100vh;
@@ -795,16 +795,19 @@ span {
 /* barra de progreso para que sea más dinámica*/
 
 .progress {
-    margin-bottom: 1.5rem;
+    width: 100%;
+    border-radius: 10px;
+    padding: 3px;
 }
 
 .bar {
-    height: 10px;
+    height: 15px;
     background: #ddd;
     border-radius: 5px;
     margin-top: 0.5rem;
     position: relative;
     overflow: hidden;
+    transition: width 1s ease-in-out;
 }
 
 .bar span {
@@ -814,11 +817,6 @@ span {
     border-radius: 5px;
     position: relative;
     animation: fillBar 1.5s ease-out forwards;
-}
-
-@keyframes fillBar {
-    from { width: 0; }
-    to { width: attr(data-width); }
 }
 
 .bar span::after {
